いろいろ修正

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
         if (Math.random() < tention) {
           spawnFlyingImage();
         }
-      }, 1000);
+      }, 1000 - tention * 100);
     </script>
   </body>
 </html>
